[project]
name = "vc-app"
version = "0.1.0"
description = "Family video calling app using Streamlit and WebRTC"
authors = [
    { name = "Rekhash30", email = "rekha3042002@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.52.2,<2.0.0",
    "streamlit-webrtc>=0.64.5,<0.65.0",
    "av>=16.0.1,<17.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
